--- a/README
+++ b/README
@@ -4,6 +4,10 @@
 ===>>> edu link :
 [ site ](http://google.com)
 
+===>>> github to deepwiki
+https://github.com/rasgari/bug-bounty
+https://deepwiki.com/rasgari/bug-bounty/
+
 ===>>> edu code :
 ```bash
   context name
