--- a/README
+++ b/README
@@ -35,4 +35,17 @@ https://deepwiki.com/rasgari/bug-bounty/
 ===>>> edu github to gitdiagram
 [ github ](https://github.com) ===>>> [ gitdiagram ](https://gitdiagram.com)
 
+======================================
 
+اگه تازه وارد یه تیم جدید شدی و همه دارن درباره‌ی best practices کُد ریویو حرف می‌زنن ولی هیچ‌کس معلوم نمی‌کنه دقیقاً چی درسته و چی نه، گوگل سال‌ها تجربه‌ی خودش توی مدیریت ریویوها رو خلاصه کرده و گذاشته اینجا. از نکات ریز مثل نام‌گذاری متغیر تا نحوه‌ی فیدبک دادن مودبانه.
+
+google.github.io/eng-practices
+
+=======================================
+
+پیدا کردن آموزش خوب برای rust سخته این یکی از قشنگ ترین آموزش های راسته که تیم گوگل نوشتتش بسیار ساده‌ و کوتاه :
+google.github.io/comprehensive-rust
+
+@Linuxor
+
+=======================================
