--- a/README
+++ b/README
@@ -49,3 +49,9 @@ google.github.io/comprehensive-rust
 @Linuxor
 
 =======================================
+
+کد ها می‌تونی آنلاین اجرا کنی 
+
+https://colab.research.google.com
+
+---
